--- a/projects/net.splitcells.gel.doc/src/main/html/net/splitcells/gel/presentation/covid.html
+++ b/projects/net.splitcells.gel.doc/src/main/html/net/splitcells/gel/presentation/covid.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="application/html;charset=UTF-8"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.2/reveal.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.2/theme/moon.min.css"/>
     <style>:root {
