Add website link to presentation.

--- a/projects/net.splitcells.gel.doc/src/main/html/net/splitcells/gel/presentation/covid.html
+++ b/projects/net.splitcells.gel.doc/src/main/html/net/splitcells/gel/presentation/covid.html
@@ -16,6 +16,7 @@
 			h4 {text-transform: none
 			!important;}
 
+
     </style>
 </head>
 <body>
@@ -34,7 +35,7 @@
                     <br/>
                     <br/>
                     <br/>
-                    by Mārtiņš Avots
+                    By Mārtiņš Avots <br/>On <a href="http://splitcells.net">splitcells.net</a>
                 </div>
                 <div
                         style="flex: auto; height: 100%; background-size: 100%; background-repeat: no-repeat; background-image: url(http://splitcells.net/net/splitcells/martins/avots/website/images/license.standard/starting-to-learn-how-to-draw-a-face.jpg);"></div>
@@ -251,7 +252,7 @@
                 </div>
             </div>
         </section>
-        <section  data-transition="fade-out">
+        <section data-transition="fade-out">
             <h3>Query Based Constraints</h3>
             <br/>
             <br/>
@@ -427,8 +428,7 @@
                     <h4>Further Questions?</h4>
                     <br/>
                     <br/>
-                    <br/>
-                    <br/>
+                    More Info <br/>On <a href="http://splitcells.net">splitcells.net</a>
                 </div>
                 <div
                         style="flex: auto; height: 100%; background-size: 100%; background-repeat: no-repeat; background-image: url(http://splitcells.net/net/splitcells/martins/avots/website/images/license.standard/starting-to-learn-how-to-draw-a-face.jpg);"></div>
