--- a/projects/net.splitcells.gel.doc/src/main/html/net/splitcells/gel/presentation/covid.html
+++ b/projects/net.splitcells.gel.doc/src/main/html/net/splitcells/gel/presentation/covid.html
@@ -63,7 +63,7 @@
         <section>
             <h3>Simplified Model</h3>
             <h4>Solution =</h4>
-            <h4>Supply + Demand</h4>
+            <h4>Demand + Supply</h4>
             <br/>
             <p>
                 Problems are modeled like <strong>markets</strong>.
@@ -80,7 +80,7 @@
         </section>
         <section>
             <h3>Simplified Data Model</h3>
-            <h4>Supply + Demand</h4>
+            <h4>Demand + Supply</h4>
             <br/>
             <div style="display: flex; flex-direction: row; width: 100%; flex-wrap: nowrap;">
                 <table>
