Add integrity check for external js script.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.gel.doc/src/main/html/net/splitcells/gel/presentation/covid.html
+++ b/projects/net.splitcells.gel.doc/src/main/html/net/splitcells/gel/presentation/covid.html
@@ -436,7 +436,7 @@
         </section>
     </div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.2/reveal.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.2/reveal.js" integrity="sha384-Br7Wift2sihbOvXuteX0m8VeJ7W8joDNwY3mdSvjVzxVvTtH3Tgb+j56/tVF/StW" crossorigin="anonymous"></script>
 <script>Reveal.initialize();</script>
 </body>
 </html>
