Fix issues hidden by quirk mode.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.gel.doc/src/main/html/net/splitcells/gel/presentation/covid.html
+++ b/projects/net.splitcells.gel.doc/src/main/html/net/splitcells/gel/presentation/covid.html
@@ -19,6 +19,7 @@
 			!important;}
 
 
+
     </style>
 </head>
 <body>
@@ -85,7 +86,7 @@
             <h4>Demand + Supply</h4>
             <br/>
             <div style="display: flex; flex-direction: row; width: 100%; flex-wrap: nowrap;">
-                <table>
+                <table style="font-size: 20px;">
                     <tr>
                         <th>Time</th>
                         <th>Patient</th>
@@ -111,7 +112,7 @@
                         <td>..</td>
                     </tr>
                 </table>
-                <table>
+                <table style="font-size: 20px;">
                     <tr>
                         <th>Doctor</th>
                         <th>Checker</th>
@@ -145,7 +146,7 @@
                 </table>
             </div>
             <h4>= Solution</h4>
-            <table>
+            <table style="font-size: 20px;">
                 <tr>
                     <th>Time</th>
                     <th>Patient</th>
@@ -196,7 +197,7 @@
             <div style="display: flex; flex-direction: row; width: 100%; flex-wrap: nowrap;">
                 <div>
                     <h4>Solution</h4>
-                    <table>
+                    <table style="font-size: 20px;">
                         <tr>
                             <th>Time</th>
                             <th>Patient</th>
@@ -245,7 +246,7 @@
                 </h3>
                 <div>
                     <h4>Constraint</h4>
-                    <ol>
+                    <ol style="font-size: 20px;">
                         <li>Process one appointment at a time.</li>
                         <li>People need breaks.</li>
                         <li>Distribute workloads evenly.</li>
@@ -261,7 +262,7 @@
             <div style="display: flex; flex-direction: row; width: 100%; flex-wrap: nowrap;">
                 <div>
                     <h4>Solution</h4>
-                    <table>
+                    <table style="font-size: 20px;">
                         <tr>
                             <th>Time</th>
                             <th>Patient</th>
@@ -337,7 +338,7 @@
             <div style="display: flex; flex-direction: row; width: 100%; flex-wrap: nowrap;">
                 <div>
                     <h4>Solution</h4>
-                    <table>
+                    <table style="font-size: 20px;">
                         <tr>
                             <th>Time</th>
                             <th>Patient</th>
@@ -438,7 +439,10 @@
         </section>
     </div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.2/reveal.js" integrity="sha384-Br7Wift2sihbOvXuteX0m8VeJ7W8joDNwY3mdSvjVzxVvTtH3Tgb+j56/tVF/StW" crossorigin="anonymous"></script>
+<!--script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.1.2/reveal.js" integrity="sha384-Br7Wift2sihbOvXuteX0m8VeJ7W8joDNwY3mdSvjVzxVvTtH3Tgb+j56/tVF/StW" crossorigin="anonymous"></script-->
+<script src="https://cdn.jsdelivr.net/npm/reveal.js@4.4.0/dist/reveal.min.js"
+        integrity="sha384-jLymA2v7+QnCDb4n79M+LRa/xeG/68tHy6IrgmSveAAfAjDlewtc69DptfnCwiUK"
+        crossorigin="anonymous"></script>
 <script>Reveal.initialize();</script>
 </body>
 </html>
